<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/floating_fav"
            android:src="@drawable/baseline_favorite_border_24"
            app:layout_constraintBottom_toTopOf="@+id/tv_detail_title"
            app:layout_constraintEnd_toEndOf="@+id/img_detail_photo"
            app:layout_constraintHorizontal_bias="0.915"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/img_detail_photo"
            app:layout_constraintVertical_bias="1.0" />

        <ImageView
            android:id="@+id/img_detail_photo"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/event_not_found"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/tv_detail_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            app:layout_constraintTop_toBottomOf="@+id/img_detail_photo"
            tools:text="@string/detail_event" />

        <TextView
            android:id="@+id/tv_detail_own"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_title"
            tools:text="@string/own_event" />

        <TextView
            android:id="@+id/remaining_quota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="14sp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_own"
            android:text="@string/available_quotas" />

        <TextView
            android:id="@+id/tv_detail_quota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/remaining_quota"
            app:layout_constraintTop_toTopOf="@+id/remaining_quota"
            tools:text="@string/_500" />

        <TextView
            android:id="@+id/tv_open"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="14sp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_quota"
            android:text="@string/begin" />

        <TextView
            android:id="@+id/tv_detail_begin_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="@+id/tv_open"
            app:layout_constraintTop_toBottomOf="@+id/tv_open"
            tools:text="@string/_28_05_2004_07_00" />

        <TextView
            android:id="@+id/tv_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/tv_detail_begin_time"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_begin_time"
            android:text="@string/end" />

        <TextView
            android:id="@+id/tv_detail_end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="@+id/tv_close"
            app:layout_constraintTop_toBottomOf="@+id/tv_close"
            tools:text="@string/_28_05_2004_07_00" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="15sp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_end_time"
            tools:text="@string/descrpition" />

        <TextView
            android:id="@+id/tv_detail_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:textSize="14sp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_description"
            tools:text="@string/blablabla" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/rounded_bottom"
            android:text="@string/register"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_description" />

        <ProgressBar
            android:id="@+id/progress_bar_detail"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
